--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tracking-portal",
+  "name": "react-tracking-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
